# rustwasmboilerplate

./: Cargo.toml  README.md  build.sh  format.sh  library.wasm  rustfmt.toml  test.ts  testwasm.ts
.cargo/: config.toml
src/: features.rs  lib.rs
