[package]
name = "wasm-template"
version = "0.1.0"
authors = ["Tricked-dev"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
miniz_oxide = { version = "0.7.1", default-features = false, features = ["with-alloc", "std", "core"] }
ron = "0.8.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0.108" }

[profile.release]
opt-level = 's'
panic = "abort"
lto = true
strip = true
codegen-units = 1
